Added password visibility option, droped username and confirm password

--- a/public/src/forms.css
+++ b/public/src/forms.css
@@ -28,4 +28,8 @@ form input:focus {
   .hidden{
       display: none;
   }
+form .visibility {
+    margin-left: -30px;
+    cursor: pointer;
+}
   
