--- a/public/src/typography.css
+++ b/public/src/typography.css
@@ -1,7 +1,7 @@
 .fancy-text{
     font-family: 'Kurale', serif;
   }
-.roboto-font{
+.body-font{
     font-family: 'Roboto', serif;
 }
 .button-font-size{
