--- a/public/src/buttons.css
+++ b/public/src/buttons.css
@@ -10,6 +10,7 @@
     text-align: center;
     font-weight: 500;
     text-transform: uppercase;
+    cursor: pointer;
 }
 .button-short{
     width: 100px;
