--- a/public/src/footer.css
+++ b/public/src/footer.css
@@ -5,7 +5,7 @@
     left: 0;
     width: 100%;
     box-sizing: border-box;
-    /* background-color: #F2F2F2; */
+    background-color: #F2F2F2;
     color: #797979;
     text-align: left;
     padding: 1rem 1.5rem;
@@ -21,17 +21,21 @@
   
 }    
 .footer-section a{
-    color: #387ef5;
+  color: #444444;
+  font-weight: 400;
 } 
+.footer-section a.active{
+  color: #2196f3;
+}
   .link-container{
     width: 100%;
-    height: 100px;
+    min-height: 130px;
     margin: 0px auto;
   }
 
   .copyright{
     width: 100%;
-     text-align: center;
+     /* text-align: center; */
      margin-top: 25px;
      border-top: 1px solid #b6b4b4;
      height: 10px;
