--- a/public/src/header.css
+++ b/public/src/header.css
@@ -1,12 +1,13 @@
 .header{
     width: 100%;
-    height: 45px;
-    background-color: #387ef5;
-    padding: 0.5rem 0.5rem;
+    height: 50px;
+    background-color: #2f6dd7;
+    padding: 0.1rem 0.5rem;
     position: fixed;
     left: 0;
     top: 0;
     z-index: 10;
+    box-shadow: 0px 4px 5px #cfcfcf;
 }
 .header .icon{
     width: 40px;
