--- a/public/src/forms.css
+++ b/public/src/forms.css
@@ -27,6 +27,13 @@ form input{
     border: 1px solid #474747;
     background-color: #b3b3b321;
 }
+form input[type="radio"]{
+    width: 20px;
+    display:inline;
+    line-height: 20px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
 form .input-container{
     width:100%;
     margin-bottom: 5px;
