--- a/public/src/greeting.css
+++ b/public/src/greeting.css
@@ -3,9 +3,13 @@
     font-size: 20px;
     font-weight: 500;
     color: #515151;
+    overflow-wrap: break-word;
 }
 .greeting .icon{
     font-size: 30px;
+}
+.greeting #email-address{
+    color: #2f6dd7;
 }
 @media (min-width: 1024px){
     .greeting{
