--- a/public/src/buttons.css
+++ b/public/src/buttons.css
@@ -12,6 +12,16 @@
     font-weight: 600;
     background: none;
 }
+.button.disabled-btn{
+    pointer-events: none;
+    background-color: var(--disabled-primary) !important;
+    border-color: var(--disabled-primary);
+}
+.button.disabled-outline{
+    pointer-events: none;
+    border-color: var(--disabled-secondary) !important;
+    color: var(--disabled-secondary) !important;
+}
 .button-short{
     width: 95px;
     height: 2.8rem;
@@ -42,18 +52,28 @@
     width: 100%;
     height: 50px;
     box-sizing: content-box;
+    margin-block: 0.5rem;
+
 }
-@media (min-width: 1024px) {
-    .button-container{
-        width: 97%;
-    }
-}
+
 .primary-btn{
-    border: 1px solid #3074e7;
+    border: 1px solid var(--primary);
+    background-color: var(--primary);
+    color: var(--on-primary);
 }
 .muted-btn{
     border: 1px solid #d7d7d7;
 }
-.secondary-btn{
-    border: 1px solid #db3529;
+.secondary-btn-outline{
+    border: 1px solid var(--secondary);;
+    color: var(--secondary);
 }
+.button:hover {
+    filter: brightness(var(--hover-brightness));
+  }
+  
+  .button:focus,
+  .button:active {
+    filter: brightness(var(--active-brightness));
+    transition: none;
+  }
