--- a/public/src/cover.css
+++ b/public/src/cover.css
@@ -2,8 +2,9 @@
     height: 100vh;
     width: 100%;
     position: fixed;
-    background-color: #fffffffb;
-    z-index: 5;
+    background-color: #ffffffbf;
+    z-index: 10;
+    pointer-events: none;
 }
 .disabled{
     pointer-events: none;
