--- a/public/src/header.css
+++ b/public/src/header.css
@@ -1,12 +1,12 @@
 .header{
     width: 100%;
     height: 50px;
-    background-color: #2f6dd7;
+    background-color: var(--primary);
     padding: 0.1rem 0.5rem;
     position: fixed;
     left: 0;
     top: 0;
-    z-index: 10;
+    z-index: 6;
     box-shadow: 0px 4px 5px #cfcfcf;
 }
 .header .icon{
@@ -26,6 +26,6 @@
     line-height: 50px;
     float: left;
     font-size: 21px;
-    color: #ffff;
+    color: var(--on-primary);
     font-weight: 600;
 }
