--- a/public/src/layout.css
+++ b/public/src/layout.css
@@ -1,7 +1,15 @@
+/* View Ports to be using */
+:root{
+    --desktop: 1200px ;
+    --laptop: 1024px;
+    --tablet: 768px;
+    --phone: 480px;
+}
 .container{
     width: 90%;
     margin: 0px auto;
     padding-top: 55px;
+    padding-inline: 1.5rem;
 }
 .center-text{
     text-align: center;
