--- a/public/src/reset.css
+++ b/public/src/reset.css
@@ -21,6 +21,7 @@ time, mark, audio, video {
 
 body {
     line-height:1;
+    background-color: var(--background-color);
 }
 
 article,aside,details,figcaption,figure,
