--- a/public/src/footer.css
+++ b/public/src/footer.css
@@ -8,7 +8,8 @@
     background-color: #F2F2F2;
     color: #797979;
     text-align: left;
-    padding: 1rem 1.5rem;
+    padding-block: 1rem;
+    padding-inline: 2.5rem;
   }
     
   .footer-section {
