--- a/public/src/reset.css
+++ b/public/src/reset.css
@@ -22,6 +22,7 @@ time, mark, audio, video {
 body {
     line-height:1;
     background-color: var(--background-color);
+    scroll-behavior: smooth;
 }
 
 article,aside,details,figcaption,figure,
