--- a/public/src/header.css
+++ b/public/src/header.css
@@ -1,4 +1,4 @@
-.header{
+/* .header{
     width: 100%;
     height: 50px;
     background-color: var(--primary);
@@ -28,4 +28,75 @@
     font-size: 21px;
     color: var(--on-primary);
     font-weight: 600;
+} */
+header{
+    display: grid;
+    align-content: center;
+    grid-template-columns: 15% 55% 25%;
+    width: 100%;
+    height: 50px;
+    background-color: var(--primary);
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 6;
+    box-shadow: 0px 4px 5px #cfcfcf;;
+}
+header div{
+    display: inline-grid;
+    align-content: center;
+}
+header div.icon-container{
+    justify-content: center;
+}
+header div.icon-container img{
+    width: 30px;
+    border-radius: 2px;
+}
+header div.items{
+    text-align: right;
+    justify-content: center;
+    grid-template-columns: 25% 25% 25% 25%;
+    
+
+}
+header div.items a{
+    color: var(--on-primary);
+    text-transform: uppercase;
+}
+header div.title{
+    font-size: 21px;
+    color: var(--on-primary);
+    font-weight: 600;
+}
+@media (min-width: 768px){
+    .on-laptop-down{
+        display: none;
+    }
+    .on-laptop-up{
+        display: block;
+    }
+    header{
+        display: grid;
+        align-content: center;
+        grid-template-columns: 8% 42% 50%;
+    }
+    header div.items{
+        padding-right: 30px;
+    }
+    header div.items a{
+        color: var(--on-primary);
+        text-transform: capitalize;
+    }
+  
+}
+@media (max-width: 768px){
+    .on-laptop-up{
+        display:none;
+        
+    }
+    header div.items{
+        grid-template-columns: 50% 50%;
+        justify-content: center;
+    }
 }
