--- a/public/src/back-drop.css
+++ b/public/src/back-drop.css
@@ -5,7 +5,7 @@
     grid-template-rows: 15% 20%;
     align-content: center;
     margin-top: 55px;
-    background-position: center;
+    background-position: top;
     background-size: cover;
     align-items: center;
 
@@ -14,12 +14,28 @@
     width: 80%;
     margin: 0px auto;
     text-align: center;
+    font-size: 16px;
 }
 #back-drop #search-box{
-    border: 2px solid #ffffffc2;
+    border: 2px solid #0e0e0e87;
     border-radius: 3px;
     display: grid;
     grid-template-columns: 15% 85%;
     height: 40px;
-    color: #000000;
+    align-items: center;
+}
+@media screen and (max-width: 460px){
+    #back-drop{
+        height: 180px;
+    }
+}
+@media screen and (max-width: 400px){
+    #back-drop{
+        height: 160px;
+    }
+}
+@media screen and (max-width: 380px){
+    #back-drop{
+        height: 140px;
+    }
 }
