--- a/public/src/header.css
+++ b/public/src/header.css
@@ -1,41 +1,12 @@
-/* .header{
-    width: 100%;
-    height: 50px;
-    background-color: var(--primary);
-    padding: 0.1rem 0.5rem;
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 6;
-    box-shadow: 0px 4px 5px #cfcfcf;
-}
-.header .icon{
-    width: 40px;
-    height: 40px;
-    float: left;
-    margin: 10px;
-}
-.header .icon .image-icon{
-    width: 30px;
-    height: 30px;
-}
 
-.header .title{
-    width: 100px;
-    height: 40px;
-    line-height: 50px;
-    float: left;
-    font-size: 21px;
-    color: var(--on-primary);
-    font-weight: 600;
-} */
 header{
     display: grid;
     align-content: center;
-    grid-template-columns: 15% 55% 25%;
+    grid-template-columns: 2% 60% 36% 2%;
     width: 100%;
-    height: 55px;
-    background-color: var(--primary);
+    min-height: 50px;
+    background-color: var(--primary-dark);
+    padding-block: 10px;
     position: fixed;
     left: 0;
     top: 0;
@@ -45,6 +16,11 @@ header{
 header div{
     display: inline-grid;
     align-content: center;
+    /* padding-inline: 10px; */
+}
+header .material-icons {
+    font-size: 26px;
+    line-height: 1.5;
 }
 header div.icon-container{
     justify-content: center;
@@ -65,37 +41,97 @@ header div.items a{
     text-transform: uppercase;
 }
 header div.title{
-    font-size: 21px;
+    font-size: 19px;
     color: var(--on-primary);
-    font-weight: 600;
+}
+header #search-bar{
+    /* display: grid; */
+    grid-template-columns: 10% 90%;
+    background-color: var(--primary-light);
+    padding: 15px;
+    border-radius: 3px;
+}
+header #search-bar input{
+    background-color: var(--primary-light);
+    font-size: 15px;
+    width: 100%;
+    color: #fff;
+    font-weight: 500;
+
+
+}
+header #search-bar input::placeholder{
+    color: #fff;
+    filter: brightness(var(--hover-brightness));
+    font-size: 15px;
+    font-weight: 500;
+
+    
+}
+header #search-bar:focus{
+    filter: brightness(var(--hover-brightness));
+    
 }
 @media (min-width: 768px){
+    header #search-bar .material-icons {
+        font-size: 24px;
+        line-height: 0;
+        color: #fff;
+        filter: brightness(var(--hover-brightness));
+    }
+    header #search-bar{
+        display: grid;
+    }
     .on-laptop-down{
-        display: none;
+        display: none !important;
     }
     .on-laptop-up{
-        display: block;
+        display: block  !important;
     }
     header{
-        height: 70px;
-        grid-template-columns: 8% 42% 50%;
+        grid-template-columns:  3% 15.5% 40% 38.5% 3%;
     }
     header div.items{
-        padding-right: 30px;
+        overflow: hidden;
     }
     header div.items a{
         color: var(--on-primary);
         text-transform: capitalize;
+        font-size: 12px;
+    }
+  
+}
+@media (min-width: 1200px){
+    header{
+        grid-template-columns:  3% 15.5% 44% 34.5% 3%;
+    }
+}
+
+@media (min-width: 1024px){
+    header div.items a{
+        color: var(--on-primary);
+        text-transform: capitalize;
+        font-size: 14px;
+
+    }
+
+    header{
+        grid-template-columns:  3% 15.5% 42% 36.5% 3%;
     }
   
 }
 @media (max-width: 768px){
+    header #search-bar{
+        display: none;
+    }
     .on-laptop-up{
-        display:none;
+        display: none !important;
         
     }
+   
     header div.items{
-        grid-template-columns: 50% 50%;
+        grid-template-columns: 33.3% 33.3% 33.3%;
         justify-content: center;
     }
 }
+
