--- a/public/src/screens.css
+++ b/public/src/screens.css
@@ -18,12 +18,27 @@
 
 }
 
+@media (min-width: 1024px){
+    /*laptop going up*/
+    form{
+        width: 35%;
+        margin: 0px auto;
+    }
+}
+@media (min-width: 1200px){
+    /*laptop going up*/
+    form{
+        width:30%;
+        margin: 0px auto;
+    }
+}
+
 /*tablet going up*/
 @media (min-width: 768px){
     #side-image{
-        background-image: url("assets/background-2-small.jpg");
+        background-image: url("assets/bg/b2-slim.jpeg");
         background-repeat: no-repeat;
-        width: 40%;
+        width: 30%;
         height: 100vh;
         background-position: center;
         background-size: cover;
@@ -41,7 +56,7 @@
             position: absolute;
             width: 100%;
             height: 100vh;
-            background-color: #2a66cda8;
+            background-image: linear-gradient(to bottom left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.74));
         }
         .spinner{
             right: 24%;
@@ -49,18 +64,18 @@
             left: unset;
         }
     .container.form-container, #page{
-        width: 60%;
+        width: 70%;
         float: right;
         margin-top: 70px;
     }
     form{
-        width: 60%;
+        width: 50%;
         margin: 0px auto;
     }
     .footer{
         float: left;
         position: fixed;
-        width: 40%;
+        width: 30%;
         color: #ffffffc7;
         bottom: 0px;
         left:0px;
@@ -69,8 +84,6 @@
     .footer-section a {
         color: #f3f3f3d4;
     }
-    .header{
-        display:none;
-    }
+    
 }
 
