--- a/public/src/style.css
+++ b/public/src/style.css
@@ -14,6 +14,8 @@
 @import "greeting.css";
 @import "messages.css";
 @import "back-drop.css";
+@import "search-bar.css";
+@import "category-card.css";
 
 .helper-text{
     font-size:14px;
