Created a shopping cart button and added it to index.html

--- a/public/src/style.css
+++ b/public/src/style.css
@@ -14,6 +14,7 @@
 @import "greeting.css";
 @import "messages.css";
 @import "back-drop.css";
+@import "cart.css";
 
 .helper-text{
     font-size:14px;
