Updated the header

--- a/public/src/style.css
+++ b/public/src/style.css
@@ -1,7 +1,7 @@
 @import "reset.css";
 @import "layout.css";
 @import "theme.css";
-@import "header.css";
+@import "new-header.css";
 @import "typography.css";
 @import "buttons.css";
 @import "footer.css";
