--- a/public/src/typography.css
+++ b/public/src/typography.css
@@ -1,13 +1,11 @@
-.fancy-text{
-    font-family: 'Orbitron', sans-serif;
-  }
+
 .body-font{
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Barlow', sans-serif;
     letter-spacing: .4px;
 }
 h1, h2, h3, h4{
     font-family: 'Heebo', sans-serif;
-    line-height: 2;
+    line-height: .25px;
 }
 
 .button-font-size{
