--- a/public/src/new-header.css
+++ b/public/src/new-header.css
@@ -1,6 +1,6 @@
 header {
     width: 100%;
-    height: 125px;
+    height: 120px;
     position: absolute;
     top: 0;
     left: 0;
@@ -9,7 +9,7 @@ header {
     padding: 0px;
     margin: 0px;
     display: grid;
-    grid-template-rows: 50% 50%;
+    grid-template-rows: 55% 45%;
 }
 
 header .top-section {
@@ -36,7 +36,7 @@ header .top-section .actions {
 }
 
 header .top-section .actions .material-icons {
-    font-size: 25px;
+    font-size: 24px;
     color: #FFFFFF;
 }
 
@@ -48,11 +48,11 @@ header .bottom-section {
 header .bottom-section .search-bar {
     width: 100%;
     border: none;
-    height: 50px;
+    height: 45px;
     padding: 0px;
     margin: 0px;
     background-color: #FFFFFF;
-    border-radius: 5px;
+    border-radius: 3px;
 
 }
 
@@ -60,8 +60,8 @@ header .bottom-section .search-bar input {
     width: 70%;
     border: none;
     float: left;
-    height: 50px;
-    border-radius: 5px;
+    height: 45px;
+    border-radius: 3px;
     margin-left: 10px;
 
 }
@@ -72,16 +72,16 @@ header .bottom-section .search-bar input::placeholder {
 }
 
 header .bottom-section .search-bar .search-button {
-    width: 50px;
-    height: 50px;
+    width: 45px;
+    height: 45px;
     border: none;
     align-items: center;
     justify-items: center;
-    background-color: #F32B2B;
+    background-color: #ff9800;
     float: right;
     position: relative;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
 
 }
 
@@ -89,5 +89,5 @@ header .bottom-section .search-bar .search-button i.material-icons {
     position: absolute;
     left: 25%;
     top: 25%;
-    color: #FFFFFF;
+    color: #0a0022;
 }
