--- a/public/src/theme.css
+++ b/public/src/theme.css
@@ -14,7 +14,7 @@
     --on-tetiary: #444444;
     --on-error: #000000;
     --on-muted: #939393;
-    --background-color: #ffffff;
+    --background-color: #f5f5f5;
     --hover-brightness: 0.90;
     --active-brightness: 0.65;
     --surface-1: rgb(241, 241, 241);
