--- a/public/src/typography.css
+++ b/public/src/typography.css
@@ -4,7 +4,7 @@
     letter-spacing: .4px;
 }
 h1, h2, h3, h4{
-    font-family: 'Heebo', sans-serif;
+    font-family: 'Rowdies', cursive;
     line-height: .25px;
 }
 
