--- a/public/src/new-header.css
+++ b/public/src/new-header.css
@@ -1,7 +1,7 @@
 header {
     width: 100%;
     height: 120px;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     background-color: #24027B;
