--- a/public/src/style.css
+++ b/public/src/style.css
@@ -19,6 +19,7 @@
 @import "search-bar.css";
 @import "category-card.css";
 @import "cart.css";
+@import "cart-items.css";
 @import "department-carousel.css";
 @import "Newfooter.css";
 @import "prompt.css";
