--- a/public/src/style.css
+++ b/public/src/style.css
@@ -21,7 +21,7 @@
 @import "cart.css";
 @import "cart-items.css";
 @import "department-carousel.css";
-@import "Newfooter.css";
+@import "newfooter.css";
 @import "prompt.css";
 .helper-text{
     font-size:14px;
